--- a/web/index.css
+++ b/web/index.css
@@ -1,14 +1,52 @@
+*{
+    background-color: rgb(232, 180, 248);
+}
 header>div>h1{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 #divInputGrupo{
-    height: 5vh;
+    height: 10vh;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#inputGrupo{
+    background-color: aliceblue;
+    height: 20px;
+    width: 220px;
 }
 
-#divInputCancion{
-    height: 5vh;
-    width: 100%;
+#listaGrupos{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: fit-content;
+    width: 60%;
+    margin-left: 20%;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Prompt', sans-serif;
+    font-weight: 400;
+}
+#grupo{
+    margin-top: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 200px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+#grupo:hover{
+    background-color: rgb(98, 159, 250);
+    color: aliceblue;
+}
+#nombreGrupo{
+    background-color: inherit;
 }
