--- a/web/index.css
+++ b/web/index.css
@@ -30,7 +30,7 @@ header>div>h1{
     font-family: 'Prompt', sans-serif;
     font-weight: 400;
 }
-#grupo{
+.grupo{
     margin-top: 20px;
     margin-left: 5px;
     margin-right: 5px;
@@ -43,9 +43,10 @@ header>div>h1{
     border-radius: 5px;
     font-size: 14px;
 }
-#grupo:hover{
+.grupo:hover{
     background-color: rgb(98, 159, 250);
     color: aliceblue;
+    cursor: pointer;
 }
 #nombreGrupo{
     background-color: inherit;
